--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <body>
 
+
     <!-- sticky header -->
-    <div class="sticky-heading sticky-top top-0">
+    <div class="sticky-heading fixed-top">
         <!-- SALE BANNER -->
         <div class="overflow-hidden bg-color-black">
             <div class="container-fluid">
@@ -116,10 +117,10 @@
                             <!-- Parallax gfx -->
                             <a href="cases-item.html">
                                 <div class="parallax">
-                                    <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
+                                    <div class="parallax-layer w-100" data-depth="0.1" style="z-index: 2;">
                                         <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
                                     </div>
-                                    <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
+                                    <div class="parallax-layer w-100" data-depth="0.25" style="z-index: 3;">
                                         <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
                                     </div>
                                 </div>
@@ -129,11 +130,11 @@
                             <!-- Parallax gfx -->
                             <a href="cases-item.html">
                                 <div class="parallax">
-                                    <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
-                                      <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
+                                    <div class="parallax-layer w-100" data-depth="0.1" style="z-index: 2;">
+                                    <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
                                     </div>
-                                    <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
-                                      <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
+                                    <div class="parallax-layer w-100" data-depth="0.25" style="z-index: 3;">
+                                    <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
                                     </div>
                                 </div>
                             </a>
@@ -142,11 +143,11 @@
                             <!-- Parallax gfx -->
                             <a href="cases-item.html">
                                 <div class="parallax">
-                                    <div class="parallax-layer" data-depth="0.1" style="z-index: 2;">
-                                      <img class="mx-auto" src="img/devices1.png" alt="tablet">
+                                    <div class="parallax-layer w-100" data-depth="0.1" style="z-index: 2;">
+                                    <img class="mx-auto" src="img/devices1.png" alt="tablet">
                                     </div>
-                                    <div class="parallax-layer" data-depth="0.25" style="z-index: 3;">
-                                      <img class="mx-auto" src="img/devices2.png" alt="phone">
+                                    <div class="parallax-layer w-100" data-depth="0.25" style="z-index: 3;">
+                                    <img class="mx-auto" src="img/devices2.png" alt="phone">
                                     </div>
                                 </div>
                             </a>
@@ -688,6 +689,8 @@
             </div>
         </div>
     </footer>
+
+
 
     <!-- Back to Top -->
     <button type="button" class="btn btn-icon btn-scroll-top rounded-circle">
