--- a/promotion.html
+++ b/promotion.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- sticky header -->
-    <div class="sticky-heading sticky-top top-0">
+    <div class="sticky-heading fixed-top">
         <!-- SALE BANNER -->
         <div class="overflow-hidden bg-color-black">
             <div class="container-fluid">
@@ -114,16 +114,6 @@
                     <h1 class="text-uppercase fw-bold">Акции</h1>
                 </div>
                 <div class="row gy-4 gy-lg-5">
-                    <!-- item -->
-                    <div class="col-lg-10">
-                        <article class="card card-promotion h-100">
-                            <div class="card-body">
-                                <a href="promotion-item.html">
-                                    <img src="img/promo-01.gif" alt="">
-                                </a>
-                            </div>
-                        </article>
-                    </div>
                     <!-- item -->
                     <div class="col-lg-10">
                         <article class="card card-promotion h-100">
