--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- sticky header -->
-    <div class="sticky-heading sticky-top top-0">
+    <div class="sticky-heading fixed-top">
         <!-- SALE BANNER -->
         <div class="overflow-hidden bg-color-black">
             <div class="container-fluid">
