--- a/prices.html
+++ b/prices.html
@@ -193,6 +193,7 @@
         <!-- Таблицы с ценами -->
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
+                <!-- Услуга -->
                 <div class="mb-5">
                     <div class="d-flex align-items-center px-0 px-lg-3 mb-4">
                         <div class="flex-shrink-0 me-3">
@@ -218,6 +219,83 @@
                                     <div class="col-lg-2 text-lg-center">
                                         <button type="button" class="btn btn-black-02 btn-lg"
                                             style="position: relative; z-index: 5;" data-bs-toggle="modal"
+                                            data-bs-target="#mainForm">Заказать</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="price-link" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">
+                            <div class="price-item p-3 py-4 p-lg-4">
+                                <div class="row g-3 align-items-center justify-content-between">
+                                    <div class="col-lg-8">
+                                        <p class="fs-lg-24">Сайт-визитка</p>
+                                        <div class="price-description">
+                                            <p>Небольшой сайт, как правило, состоящий из одной (или нескольких)
+                                                веб-страниц и содержащий основную информацию об организации, частном
+                                                лице, компании, товарах или услугах, прейскуранты, контактные данные.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 text-lg-center">
+                                        <span class="fs-24">7 900 ₽</span>
+                                    </div>
+                                    <div class="col-lg-2 text-lg-center">
+                                        <button type="button" class="btn btn-black-02 btn-lg" data-bs-toggle="modal"
+                                            data-bs-target="#mainForm">Заказать</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!-- Услуга -->
+                <div class="mb-5">
+                    <div class="d-flex align-items-center px-0 px-lg-3 mb-4">
+                        <div class="flex-shrink-0 me-3">
+                            <img src="img/prices-usluga-02.png" alt="">
+                        </div>
+                        <p class="fs-24 fs-lg-32">Разработка корпоративных сайтов</p>
+                    </div>
+                    <div class="price-table">
+                        <a class="price-link" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">
+                            <div class="price-item p-3 py-4 p-lg-4">
+                                <div class="row g-3 align-items-center justify-content-between">
+                                    <div class="col-lg-8">
+                                        <p class="fs-lg-24">Лендинг пейдж</p>
+                                        <div class="price-description">
+                                            <p>Сайт, который отлично подойдет для продажи одного товара либо одной
+                                                услуги. Состоит из 1 страницы. Его можно быстро запустить и
+                                                протестировать спрос с помощью контекстной рекламы в Яндекс.Директ.</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 text-lg-center">
+                                        <span class="fs-24">7 900 ₽</span>
+                                    </div>
+                                    <div class="col-lg-2 text-lg-center">
+                                        <button type="button" class="btn btn-black-02 btn-lg"
+                                            style="position: relative; z-index: 5;" data-bs-toggle="modal"
+                                            data-bs-target="#mainForm">Заказать</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="price-link" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">
+                            <div class="price-item p-3 py-4 p-lg-4">
+                                <div class="row g-3 align-items-center justify-content-between">
+                                    <div class="col-lg-8">
+                                        <p class="fs-lg-24">Сайт-визитка</p>
+                                        <div class="price-description">
+                                            <p>Небольшой сайт, как правило, состоящий из одной (или нескольких)
+                                                веб-страниц и содержащий основную информацию об организации, частном
+                                                лице, компании, товарах или услугах, прейскуранты, контактные данные.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 text-lg-center">
+                                        <span class="fs-24">7 900 ₽</span>
+                                    </div>
+                                    <div class="col-lg-2 text-lg-center">
+                                        <button type="button" class="btn btn-black-02 btn-lg" data-bs-toggle="modal"
                                             data-bs-target="#mainForm">Заказать</button>
                                     </div>
                                 </div>
