--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
                 }
             }
         </style>
-        <section class="section section-hero-02">
+        <section class="section section-hero-02 pt-3 pt-lg-5">
             <div class="container">
                 <div class="row g-3 align-items-end">
                     <div class="col-lg-6 text-center text-lg-start">
-                        <div class="py-lg-5">
-                            <div class="mg-main-top2__title fs-24 fs-lg-32 mb-3">День торговли!<br> –25% на разработку сайтов!</div>
+                        <div class="py-lg-5 mb-lg-5">
+                            <div class="mg-main-top2__title fs-24 fs-lg-32 fw-600 mb-3">День торговли!<br> –25% на разработку сайтов!</div>
                             <div class="mg-main-top2__text fs-18 fs-lg-24 mb-3">При оплате сайта — 4 месяца обслуживания<br> В ПОДАРОК</div>
-                            <a class="btn btn-primary btn-gradient btn-lg" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Связаться</a>
+                            <a class="btn btn-primary btn-gradient btn-lg mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Связаться</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -196,6 +196,7 @@
                 </div>
             </div>
         </section>
+        <!-- end HERO 02 -->
 
         <!-- Выгодная разработка сайта в короткий срок -->
         <section class="section py-5 dark-mode bg-color-black color-white">
