add index light

--- a/about.html
+++ b/about.html
@@ -255,12 +255,15 @@
 
         <section class="section py-5">
             <div class="container">
-                <div class="row justify-content-center mb-7">
-                    <div class="col-12 text-center">
-                        <h2 class="h1 fw-bold mb-5">Веб-студия Starsite занимается разработкой сайтов для России и зарубежных рынков с 2012 года </h2>
-                        <p class="fs-20 fs-lg-24 fw-light">Наша команда — более 20 сотрудников в разных странах и городах.<br>
-                            Понимание потребностей онлайн-бизнеса, опыт взаимодействия с тысячами клиентов, высокая квалификация персонала, собственные «ноу-хау» и  высокое качество по удивительно низким и «вкусным» ценам.</p>
+                <div class="mb-3">
+                    <div class="row justify-content-center">
+                        <div class="col-12 text-center">
+                            <h2 class="h1 fw-bold mb-5">Веб-студия Starsite занимается разработкой сайтов для России и зарубежных рынков с 2012 года </h2>
+                            <p class="fs-20 fs-lg-24 fw-light">Наша команда — более 20 сотрудников в разных странах и городах.<br>
+                                Понимание потребностей онлайн-бизнеса, опыт взаимодействия с тысячами клиентов, высокая квалификация персонала, собственные «ноу-хау» и  высокое качество по удивительно низким и «вкусным» ценам.</p>
+                        </div>
                     </div>
+                    <div class="py-4"></div>
                 </div>
                 <div class="row gy-4">
                     <div class="col-12 text-center">
@@ -329,12 +332,13 @@
         </section>
 
         <!-- Отзывы -->
-        <section class="section py-5 pb-7 dark-mode bg-color-black color-white">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row">
                     <div class="col-10">
                         <p class="fs-20 fs-lg-24 fw-light mb-0">Есть мнение</p>
-                        <p class="h1 text-uppercase fw-bold mb-6">Нас знают как команду экспертов</p>
+                        <p class="h1 text-uppercase fw-bold mb-3">Нас знают как команду экспертов</p>
+                        <div class="py-4"></div>
                     </div>
                 </div>
                 <div class="row">
