--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <main class="main">
 
         <!-- HERO -->
-        <section class="section overflow-hidden frontpage-hero d-none">
+        <section class="section overflow-hidden frontpage-hero">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10 text-center">
@@ -171,7 +171,7 @@
         </section>
 
         <!-- HERO 02 -->
-        <section class="section section-hero-02 pt-3 pt-lg-5">
+        <section class="section section-hero-02 pt-3 pt-lg-5 d-none">
             <div class="container">
                 <div class="row g-3 align-items-end">
                     <div class="col-lg-6 text-center text-lg-start">
