--- a/index-03.html
+++ b/index-03.html
@@ -118,27 +118,27 @@
         <!-- HERO C -->
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="row g-3 align-items-center">
-                    <div class="col-lg-6 text-center text-lg-start" data-aos="fade-right" data-aos-delay="100">
+                <div class="row g-4 align-items-center">
+                    <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                         <div class="">
                             <h1 class="fs-24 fs-lg-52 fw-600 mb-3">Создание и разработка<br><span class="color-blue">сайтов под ключ</span></h1>
                             <div class="fs-18 fs-lg-24 mb-3">Мы специализируемся на нетривиальных, сложных проектах, которые будут использоваться миллионами</div>
                             <div class="fs-18 fs-lg-24 mb-3">А так же успешно реализуем проекты для малого и среднего бизнеса</div>
                             <div class="mt-5">
-                                <div class="row">
-                                    <div class="col-md-4">
+                                <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3">
+                                    <div class="col">
                                         <div>
                                             <div class="fs-18 fs-lg-24 mb-0">120</div>
                                             <div class="fs-16 fs-lg-16 mb-3">Помогли взлететь</div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col">
                                         <div>
                                             <div class="fs-18 fs-lg-24 mb-0">32</div>
                                             <div class="fs-16 fs-lg-16 mb-3">Узких специалиста</div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col">
                                         <div>
                                             <div class="fs-18 fs-lg-24 mb-0">8</div>
                                             <div class="fs-16 fs-lg-16 mb-3">Направлений в it</div>
@@ -146,11 +146,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <a class="btn btn-primary btn-gradient btn-shadow-pulse btn-lg mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Бесплатно ответим на вопросы</a>
+                            <a class="btn btn-primary btn-gradient btn-shadow-pulse fs-18 py-3 mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Бесплатно ответим на вопросы</a>
                         </div>
                     </div>
                     <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
-                        <img class="mx-auto" src="img/hero-image2.png" alt="">
+                        <div class="mt-5 mt-lg-0">
+                            <img class="mx-auto" src="img/hero-image2.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -451,6 +453,7 @@
                     </div>
                 </div>
             </div>
+            <div class="py-3"></div>
         </section>
 
     </main>
