--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
-                                <!-- <li class="nav-item dropdown">
+                                <li class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                         aria-current="page">Услуги</a>
                                     <ul class="dropdown-menu">
@@ -85,7 +85,7 @@
                                         <li><a class="dropdown-item" href="#">Пункт 2</a></li>
                                         <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                     </ul>
-                                </li> -->
+                                </li>
                             </ul>
                         </div>
                     </div>
