--- a/index-02.html
+++ b/index-02.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/fancybox.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -1011,6 +1012,7 @@
     <script src="js/img-comparison-slider.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/fancybox.umd.js"></script>
     <script src="js/main.js"></script>
     <!-- Только на этой странице -->
     <script>
