--- a/blog-item.html
+++ b/blog-item.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/fancybox.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -616,6 +617,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/img-comparison-slider.js"></script>
     <script src="js/parallax.min.js"></script>
+    <script src="js/fancybox.umd.js"></script>
     <script src="js/main.js"></script>
 
 </body>
